Word Game & Answer @workl

--- a/app/src/main/res/layout/activity_word_game.xml
+++ b/app/src/main/res/layout/activity_word_game.xml
@@ -78,7 +78,7 @@
             flatui:fl_textAppearance="fl_light"
             flatui:fl_blockButtonEffectHeight="3dp"
             flatui:fl_fontFamily="ThaiSansNeue"
-            flatui:fl_fontWeight="light"
+            flatui:fl_fontWeight="regular"
             flatui:fl_fontExtension="ttf"
             flatui:fl_textColor="fl_darker"/>
 
