--- a/app/src/main/res/layout/activity_action_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_action_vocabulary_detail.xml
@@ -2,7 +2,7 @@
     android:id="@+id/scroll"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:flatui="http://schemas.android.com/apk/res-auto"
-    xmlns:wheel="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true"
@@ -11,8 +11,8 @@
 
 <LinearLayout
 android:layout_width="match_parent"
-android:layout_height="wrap_content">
-
+android:layout_height="wrap_content"
+android:orientation="vertical">
 
 
 
