--- a/app/src/main/res/layout/activity_speak_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_speak_vocabulary_detail.xml
@@ -56,8 +56,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal">
                     <VideoView
-                        android:layout_width="640px"
-                        android:layout_height="360px"
+                        android:layout_width="250dp"
+                        android:layout_height="200dp"
                         android:id="@+id/videoView"
                         android:layout_gravity="center"
                         android:layout_marginBottom="5dp"
