--- a/app/src/main/res/layout/crouton_custom_view.xml
+++ b/app/src/main/res/layout/crouton_custom_view.xml
@@ -38,7 +38,9 @@
         android:layout_marginLeft="5dp"
         android:orientation="vertical">
 
-        <TextView android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="#fff"
