--- a/app/src/main/res/layout/activity_action_vocabulary.xml
+++ b/app/src/main/res/layout/activity_action_vocabulary.xml
@@ -1,16 +1,15 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:layout_marginLeft="5dp"
-android:layout_marginRight="5dp"
-tools:context="project.se.action.ActionVocabulary">
+<com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
+    android:id="@+id/swipyrefreshlayout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:direction="top"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-<ListView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/listView"
-    android:layout_centerVertical="true"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true" />
-</LinearLayout>
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
