Customize Layout and Action Bar

--- a/app/src/main/res/layout/activity_action_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_action_vocabulary_detail.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:flatui="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#CFD8DC"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+
     android:fillViewport="true"
     android:overScrollMode="never"
     android:scrollbars="none">
@@ -30,10 +32,10 @@ android:orientation="vertical">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
-        android:textSize="50dp"
+        android:textSize="40dp"
         android:gravity="center"
-        android:layout_margin="5dp"
-        flatui:fl_theme="@array/dark"
+        android:textColor="#ffffff"
+        flatui:fl_customBackgroundColor="#FF5722"
         flatui:fl_fontFamily="ThaiSansNeue"
         flatui:fl_fontWeight="light"
         flatui:fl_fontExtension="ttf"
@@ -57,10 +59,11 @@ android:orientation="vertical">
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal">
                 <VideoView
-                    android:layout_width="180dp"
-                    android:layout_height="200dp"
+                    android:layout_width="200dp"
+                    android:layout_height="240dp"
                     android:id="@+id/videoView"
                     android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     />
 
@@ -68,15 +71,17 @@ android:orientation="vertical">
             </FrameLayout>
             <com.cengalabs.flatui.views.FlatTextView
                 android:id="@+id/voc_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:layout_gravity="left"
                 android:background="#0000"
                 android:textSize="25dp"
                 android:text=""
                 android:layout_margin="2dip"
-                flatui:fl_size="30dip"
-                flatui:fl_theme="@array/dark"
+                android:textColor="#ffffff"
+                flatui:fl_customBackgroundColor="#F9690E"
                 android:orientation="vertical"
                 flatui:fl_fontFamily="ThaiSansNeue"
                 flatui:fl_fontWeight="light"
@@ -84,15 +89,17 @@ android:orientation="vertical">
 
             <com.cengalabs.flatui.views.FlatTextView
                 android:id="@+id/cat_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:layout_gravity="left"
                 android:background="#0000"
                 android:textSize="25dp"
                 android:text=""
                 android:layout_margin="2dip"
-                flatui:fl_size="30dip"
-                flatui:fl_theme="@array/dark"
+                android:textColor="#ffffff"
+                flatui:fl_customBackgroundColor="#BF55EC"
                 android:orientation="vertical"
                 flatui:fl_fontFamily="ThaiSansNeue"
                 flatui:fl_fontWeight="light"
@@ -100,30 +107,34 @@ android:orientation="vertical">
 
             <com.cengalabs.flatui.views.FlatTextView
                 android:id="@+id/type_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:layout_gravity="left"
                 android:background="#0000"
                 android:textSize="25dp"
                 android:text=""
                 android:layout_margin="2dip"
-                flatui:fl_size="30dip"
-                flatui:fl_theme="@array/dark"
+                android:textColor="#ffffff"
+                flatui:fl_customBackgroundColor="#19B5FE"
                 android:orientation="vertical"
                 flatui:fl_fontFamily="ThaiSansNeue"
                 flatui:fl_fontWeight="light"
                 flatui:fl_fontExtension="ttf"/>
             <com.cengalabs.flatui.views.FlatTextView
                 android:id="@+id/voc_des"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:layout_gravity="left"
                 android:background="#0000"
                 android:textSize="25dp"
                 android:text=""
                 android:layout_margin="2dip"
-                flatui:fl_size="30dip"
-                flatui:fl_theme="@array/dark"
+                android:textColor="#ffffff"
+                flatui:fl_customBackgroundColor="#E08283"
                 android:orientation="vertical"
                 flatui:fl_fontFamily="ThaiSansNeue"
                 flatui:fl_fontWeight="light"
@@ -131,15 +142,17 @@ android:orientation="vertical">
 
             <com.cengalabs.flatui.views.FlatTextView
                 android:id="@+id/voc_exam"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:layout_gravity="left"
                 android:background="#0000"
                 android:textSize="25dp"
                 android:text=""
                 android:layout_margin="2dip"
-                flatui:fl_size="30dip"
-                flatui:fl_theme="@array/dark"
+                android:textColor="#ffffff"
+                flatui:fl_customBackgroundColor="#00B16A"
                 android:orientation="vertical"
                 flatui:fl_fontFamily="ThaiSansNeue"
                 flatui:fl_fontWeight="light"
