--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -27,12 +27,12 @@
             android:text=""
             android:textSize="40dp"
             android:gravity="center"
-            android:layout_margin="20dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="10dp"
             flatui:fl_fontFamily="ThaiSansNeue"
             flatui:fl_fontWeight="light"
             flatui:fl_fontExtension="ttf"
-            flatui:fl_theme="@array/dark"
+            android:textColor="#ffffff"
+            flatui:fl_customBackgroundColor="#3F51B5"
             flatui:fl_textColor="fl_darker" />
 
         <LinearLayout
@@ -49,22 +49,25 @@
                 android:padding="10dp" >
 
                 <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_height="200dp"
                     android:id="@+id/imageView"
                     android:layout_gravity="center"
                     android:layout_marginBottom="10dp"
                     />
                 <com.cengalabs.flatui.views.FlatTextView
                     android:id="@+id/book_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
                     android:layout_gravity="left"
                     android:background="#0000"
                     android:textSize="20dp"
                     android:text=""
-                    android:layout_margin="5dip"
-                    flatui:fl_size="30dip"
+                    android:layout_margin="2dip"
+                    android:textColor="#ffffff"
+                    flatui:fl_customBackgroundColor="#F9690E"
                     flatui:fl_fontFamily="ThaiSansNeue"
                     flatui:fl_fontWeight="light"
                     flatui:fl_fontExtension="ttf"
@@ -73,14 +76,17 @@
 
                 <com.cengalabs.flatui.views.FlatTextView
                     android:id="@+id/book_des"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
                     android:layout_gravity="left"
                     android:background="#0000"
                     android:textSize="20dp"
                     android:text=""
-                    android:layout_margin="5dip"
-                    flatui:fl_size="30dip"
+                    android:layout_margin="2dip"
+                    android:textColor="#ffffff"
+                    flatui:fl_customBackgroundColor="#BF55EC"
                     flatui:fl_fontFamily="ThaiSansNeue"
                     flatui:fl_fontWeight="light"
                     flatui:fl_fontExtension="ttf"
@@ -89,14 +95,17 @@
 
                 <com.cengalabs.flatui.views.FlatTextView
                     android:id="@+id/book_page"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
                     android:layout_gravity="left"
                     android:background="#0000"
                     android:textSize="20dp"
                     android:text=""
-                    android:layout_margin="5dip"
-                    flatui:fl_size="30dip"
+                    android:layout_margin="2dip"
+                    android:textColor="#ffffff"
+                    flatui:fl_customBackgroundColor="#19B5FE"
                     flatui:fl_fontFamily="ThaiSansNeue"
                     flatui:fl_fontWeight="light"
                     flatui:fl_fontExtension="ttf"
@@ -104,14 +113,17 @@
                     flatui:fl_textColor="fl_darker"/>
                 <com.cengalabs.flatui.views.FlatTextView
                     android:id="@+id/book_author"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
                     android:layout_gravity="left"
                     android:background="#0000"
                     android:textSize="20dp"
                     android:text=""
-                    android:layout_margin="5dip"
-                    flatui:fl_size="30dip"
+                    android:layout_margin="2dip"
+                    android:textColor="#ffffff"
+                    flatui:fl_customBackgroundColor="#E08283"
                     flatui:fl_fontFamily="ThaiSansNeue"
                     flatui:fl_fontWeight="light"
                     flatui:fl_fontExtension="ttf"
@@ -120,14 +132,17 @@
 
                 <com.cengalabs.flatui.views.FlatTextView
                     android:id="@+id/book_publisher"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
                     android:layout_gravity="left"
                     android:background="#0000"
                     android:textSize="20dp"
                     android:text=""
-                    android:layout_margin="5dip"
-                    flatui:fl_size="30dip"
+                    android:layout_margin="2dip"
+                    android:textColor="#ffffff"
+                    flatui:fl_customBackgroundColor="#00B16A"
                     flatui:fl_fontFamily="ThaiSansNeue"
                     flatui:fl_fontWeight="light"
                     flatui:fl_fontExtension="ttf"
@@ -136,14 +151,17 @@
 
                 <com.cengalabs.flatui.views.FlatTextView
                     android:id="@+id/book_price"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
                     android:layout_gravity="left"
                     android:background="#0000"
                     android:textSize="20dp"
                     android:text=""
-                    android:layout_margin="5dip"
-                    flatui:fl_size="30dip"
+                    android:layout_margin="2dip"
+                    android:textColor="#ffffff"
+                    flatui:fl_customBackgroundColor="#F9BF3B"
                     flatui:fl_fontFamily="ThaiSansNeue"
                     flatui:fl_fontWeight="light"
                     flatui:fl_fontExtension="ttf"
