--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <color name="primary">#3F51B5</color>
-    <color name="primaryDark">#303F9F</color>
-    <color name="accent">#FF4081</color>
+    <color name="primary">#E91E63</color>
+    <color name="primaryDark">#C2185B</color>
+    <color name="accent">#03A9F4</color>
     <color name="accentLight">#C5CAE9</color>
 
 </resources>
