--- a/app/src/main/res/layout/activity_action_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_action_vocabulary_detail.xml
@@ -69,6 +69,32 @@ android:orientation="vertical">
 
 
             </FrameLayout>
+            <!--<info.hoang8f.android.segmented.SegmentedGroup
+                android:id="@+id/segmented2"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/button21"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/thailand"
+                    android:drawablePadding="5dp"
+                    android:text="ไทย"
+                    android:checked="true"
+                    style="@style/RadioButton" />
+
+                <RadioButton
+                    android:id="@+id/button22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/united_kingdom"
+                    android:drawablePadding="5dp"
+                    android:text="อังกฤษ"
+                    style="@style/RadioButton" />
+            </info.hoang8f.android.segmented.SegmentedGroup>-->
             <com.cengalabs.flatui.views.FlatTextView
                 android:id="@+id/voc_name"
                 android:layout_width="match_parent"
