--- a/app/src/main/res/layout/activity_place_info.xml
+++ b/app/src/main/res/layout/activity_place_info.xml
@@ -1,7 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="project.se.information.place.PlaceInfo">
+<com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
+    android:id="@+id/swipyrefreshlayout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:direction="top"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
 
 <ListView
@@ -10,4 +14,4 @@ tools:context="project.se.information.place.PlaceInfo">
     android:id="@+id/listView"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true" />
-</RelativeLayout>
+</com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
